--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -6,9 +6,17 @@ video {
   z-index: -1;
 }
 
+.hero-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+}
+
 .hero-container {
   /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
-  height: 100vh;
+  height: 70vh;
   width: 100%;
   display: flex;
   flex-direction: column;
